--- a/style.css
+++ b/style.css
@@ -165,6 +165,7 @@ td.expense{
     justify-content: center;
     opacity: 0;
     visibility: hidden;
+    z-index: 999;
 }
 .modal-overlay.active{
     opacity: 1;
@@ -231,11 +232,17 @@ button:hover{
     opacity: 1;
 }
 
+.remove{
+    cursor: pointer;
+}
+
 footer{
     text-align: center;
     padding: 4rem 0 2rem;
     color: var(--dark-blue);
     opacity: 0.6;
+    position: relative;
+    z-index: 1;
 }
 
 @media (min-width: 800px){
